--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@
 !bin/symfony_requirements
 /composer.phar
 /src/Cpac/CommonBundle/Resources/public/vendor/*
+
+/.idea/workspace.xml
+/.idea/tasks.xml
