--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~3.0",
         "sensio/framework-extra-bundle": "~3.0",
-        "friendsofsymfony/user-bundle": "v1.3.4"
+        "friendsofsymfony/user-bundle": "v1.3.4",
+        "friendsofsymfony/rest-bundle": "1.4.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
